--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@ tr:nth-child(even) {
   </tr>
   <tr>
   <td>Lois</td>
-  <td>Griffin</td>
+  <td>Griffin <ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul> </td>
   <td>$150</td>
   </tr>
   <tr>
